tests/ui/macros/macro-expand-within-generics-in-path.stderr
error: unexpected generic arguments in path
  --> $DIR/macro-expand-within-generics-in-path.rs:15:11
   |
LL | m!(generic<p!()>);
   |           ^^^^^^

error: cannot find attribute `generic` in this scope
  --> $DIR/macro-expand-within-generics-in-path.rs:15:4
   |
LL | m!(generic<p!()>);
   |    ^^^^^^^

error: aborting due to 2 previous errors

